--- a/Week4 Convolutional/4.1 CNN Introduction.ipynb
+++ b/Week4 Convolutional/4.1 CNN Introduction.ipynb
@@ -67,8 +67,8 @@
         "\n",
         "\n",
         "2. Perform `2x2` max pooling on the convolved features. Stride of 2.\n",
-        " * **Answer:**\n",
-        "\n",
+        " * **Answer:** We take blocks 2x2 so the whole one.\n",
+        "[25]\n",
         "### Assignment 1.2: Output dimensionality\n",
         "\n",
         "Given the following 3D tensor input `(channel, height, width)`, a given amount (`channels_out`) of filters `(channels_in, filter_height, filter_width)`, stride `(height, width)` and padding `(height, width)`, calculate the output dimensionality if it is valid.\n",
@@ -82,8 +82,7 @@
         "4. input tensor with dimensionality (11, 8, 16) and 7 filters of size (11, 3, 3) with stride (2, 2) and padding (1, 1)\n",
         " * **Answer:**\n",
         "5. input tensor with dimensionality (128, 256, 256) and 112 filters of size (128, 3, 3) with stride (1, 1) and padding (1, 1)\n",
-        " * **Answer:**\n",
-        ""
+        " * **Answer:**\n"
       ]
     },
     {
